# Basic-Audio-Synthesis

./: CMakeLists.txt  README.md  main.cpp
audio/: audio.cpp  audio.h
src/: CMakeLists.txt  main.cpp
src/audio/: audio.cpp  audio.h
src/wav/: rt_waveformat.cpp  wave.cpp  wave.h  waveformat.cpp
wav/: cwave.cpp  twave.cpp  wave.cpp  wave.h  waveformat.cpp
